Fixes content width issue on tablet width

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,7 +4,7 @@
 	&.main-content {
 		padding-top: 30px; 
         
-		@include breakFirst(medium){
+		@media screen and ( min-width: $screen-lg ){
 			padding: $grid-gutter-width*1.5 $grid-gutter-width*2;
             margin-bottom: $grid-gutter-width*2;
 		}	
